<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/>
    </parent>

    <groupId>com.verinite</groupId>
    <artifactId>iso8583-validator-backend</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>common-lib</module>
        <module>service-registry</module>
        <module>config-server</module>
        <module>api-gateway</module>
        <module>auth-service</module>
        <module>profile-service</module>
        <module>rules-service</module>
        <module>validation-engine</module>
        <module>ai-service</module>
        <module>history-service</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <spring-cloud.version>2024.0.1</spring-cloud.version>
        <jjwt.version>0.12.5</jjwt.version>
        <jpos.version>2.1.9</jpos.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jpos</groupId>
                <artifactId>jpos</artifactId>
                <version>${jpos.version}</version>
            </dependency>

            <dependency>
                <groupId>com.verinite</groupId>
                <artifactId>common-lib</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

</project>